--- a/ClothBazar.Web/Views/Category/Create.cshtml
+++ b/ClothBazar.Web/Views/Category/Create.cshtml
@@ -3,18 +3,23 @@
     ViewBag.Title = "Create";
 }
 
+<br/>
 <h2>Create Category</h2>
+<hr/>
 <div class="container">
     <form class="row" method="post">
         <div class="form-group">
-            <label class="control-label">Name</label>
-            <input name="Name" class="form-control"/>
+            <label>Name</label>
+            <input name="Name" class="form-control" />
         </div>
-        <br/>
-
-        <label class="control-label">Description</label>
-        <input name="Description" form-control"/>
-        <br/>
-        <button class="col-md-3 btn-primary form-group" type="submit">Save</button>
+        
+        <div class="form-group">
+            <label>Description</label>
+            <input name="Description" class="form-control" />
+        </div>
+        <br />
+        <div class="col-lg-3 form-group">
+            <button class="btn-primary form-control" type="submit">Save</button>
+        </div>  
     </form>
 </div>
