--- a/ClothBazar.Web/Views/Category/Edit.cshtml
+++ b/ClothBazar.Web/Views/Category/Edit.cshtml
@@ -9,16 +9,17 @@
 <hr />
 <div class="container">
     <form class="row" method="post">
+        <input type="hidden" name="id" value="@Model.ID"/>
         <div class="form-group">
             <label>Name</label>
-            <input name="Name" value =@Model.Name class="form-control" />
+            <input name="Name" value=@Model.Name class="form-control"/>
         </div>
 
         <div class="form-group">
             <label>Description</label>
-            <input name="Description" value =@Model.Description class="form-control" />
+            <input name="Description" value=@Model.Description class="form-control"/>
         </div>
-        <br />
+        <br/>
         <div class="col-lg-3 form-group">
             <button class="btn-primary form-control" type="submit">Update</button>
         </div>
